Mon Aug  8 09:06:30 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c: compile commented code is development enabled

Mon Aug  8 09:03:58 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/bulk.c: fix typo

Sat Aug  6 20:46:47 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: fix tds 7.3 connection

Thu Aug  4 06:32:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/tds_sysdep_public.h:
	- change header inclusion order to avoid wrong redeclarations

Wed Jul 27 18:34:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/query.c src/tds/token.c:
	- do not use tds9_ prefix, use tds72_ instead

Wed Jul 27 18:32:54 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/server/query.c src/tds/net.c:
	- move tds_lastpacket to server code

Wed Jul 27 18:30:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c src/tds/util.c:
	- move tds_version to tsql

Wed Jul 27 18:29:00 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c: removed tds_default_port, unused

Wed Jul 27 18:27:08 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/util.c:
	- commented out tds_gettime_ms, not used

Wed Jul 13 13:03:09 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sqlfront.h: more fix for php

Tue Jul 12 12:16:51 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/binary_test.c src/odbc/unittests/blob1.c:
	* src/odbc/unittests/cancel.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/compute.c:
	* src/odbc/unittests/connect.c src/odbc/unittests/connect2.c:
	* src/odbc/unittests/const_params.c:
	* src/odbc/unittests/convert_error.c src/odbc/unittests/cursor1.c:
	* src/odbc/unittests/cursor2.c src/odbc/unittests/cursor3.c: