@@ -1,7 +1,7 @@
 #include "common.h"
 #include <assert.h>
 
-static char software_version[] = "$Id: getdata.c,v 1.18 2010/07/05 09:20:33 freddy77 Exp $";
+static char software_version[] = "$Id: getdata.c,v 1.19 2011/08/08 07:09:04 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static void
@@ -62,20 +62,24 @@ main(int argc, char *argv[])
 	type = SQL_C_CHAR;
 
 	for (;;) {
+		char *buf = NULL;
 		/* TODO test with VARCHAR too */
 		odbc_command("SELECT CONVERT(TEXT,'Prova')");
 
 		CHKFetch("S");
 
 		/* these 2 tests test an old severe BUG in FreeTDS */
+		buf = ODBC_GET(1);
 		CHKGetData(1, type, buf, 0, NULL, "I");
 		CHKGetData(1, type, buf, 0, NULL, "I");
+		buf = ODBC_GET(3*lc);
 		CHKGetData(1, type, buf, 3 * lc, NULL, "I");
 		if (mycmp(buf, "Pr") != 0) {
 			printf("Wrong data result 1\n");
 			exit(1);
 		}
 
+		buf = ODBC_GET(4*lc);
 		CHKGetData(1, type, buf, 16, NULL, "S");
 		if (mycmp(buf, "ova") != 0) {
 			printf("Wrong data result 2 res = '%s'\n", buf);
@@ -89,17 +93,20 @@ main(int argc, char *argv[])
 
 		CHKFetch("S");
 
+		buf = ODBC_GET(7*lc);
 		CHKGetData(1, type, buf, 7 * lc, NULL, "I");
 		if (mycmp(buf, "Other ") != 0) {
 			printf("Wrong data result 1\n");
 			exit(1);
 		}
 
+		buf = ODBC_GET(5*lc);
 		CHKGetData(1, type, buf, 20, NULL, "S");
 		if (mycmp(buf, "test") != 0) {
 			printf("Wrong data result 2 res = '%s'\n", buf);
 			exit(1);
 		}
+		ODBC_FREE();
 
 		odbc_reset_statement();
 
